...
    CONDITIONS OF ANY KIND, either express or implied. See the License for
    the specific language governing permissions and limitations under the
    License.
-->
<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation" tools:locale="en">
    <!-- Text for an action button on the main screen. -->
    <string name="enter_data">Fill Blank Form</string>
    <!-- Text for an action button on the main screen. -->
    <string name="enter_data_button">Fill Blank Form</string>
    <!-- Text for an action button on the main screen. -->
    <string name="review_data">Edit Saved Form</string>
    <!-- Text for an action button on the main screen. A form count is provided in parentheses. -->
    <string name="review_data_button">Edit Saved Form (%s)‎‎‎‎</string>
...
    <string name="send_data_button">Send Finalized Form (%s)</string>
    <!-- Text for an action button on the main screen. -->
    <string name="view_sent_forms">View Sent Form</string>
    <!-- Text for an action button on the main screen. A form count is provided in parentheses. -->
    <string name="view_sent_forms_button">View Sent Form (%s)</string>
    <!-- Text for an action button on the main screen. -->
    <string name="get_forms">Get Blank Form</string>
    <!-- Text for an action button on the main screen. -->
    <string name="manage_files">Delete Saved Form</string>

    <string name="version_number">Version: %s</string>
    <string name="id_number">ID: %s</string>
    <!-- Please format date appropriately for your language: http://docs.oracle.com/javase/6/docs/api/java/text/SimpleDateFormat.html -->
...
    <!-- Title of overlay menu displayed when long pressing on a question in a form -->
    <string name="edit_prompt">Edit Prompt</string>

    <string name="clearanswer_confirm">Remove the response to \"%s\"?</string>
    <string name="clear_answer">Remove response</string>
    <string name="clear_answer_ask">Remove This Response?</string>
    <string name="clear_answer_no">Cancel</string>
    <string name="discard_answer">Remove response</string>
    <string name="discard_group">Remove group</string>

    <string name="delete_repeat">Remove group</string>
    <string name="delete_repeat_ask">Remove This Group?</string>
    <string name="delete_repeat_confirm">Remove group \"%s\" and all of its sub-groups?</string>
...
    <!--
    ##############################################
    # GET BLANK FORM
    ##############################################
    -->
    <string name="refresh">Refresh</string>
    <string name="download">Get Selected</string>

    <string name="download_forms_result">Download Results</string>
    <string name="downloading_data">Connecting to Server</string>

    <string name="fetching_file">Getting %1$s.\n\nForm %2$s of %3$s form(s).</string>
    <string name="form_download_progress">%1$s. Getting media files: %2$s of %3$s</string>
...

    <!--
     ##############################################
     # ABOUT
     ##############################################
     -->
    <string name="about_preferences">About</string>
    <string name="tell_your_friends">Share ODK Collect</string>
    <string name="tell_your_friends_msg">Are your colleagues still collecting data on paper? Share ODK Collect with them.</string>
    <string name="leave_a_review">Leave a Play Store review</string>
    <string name="leave_a_review_msg">Your (hopefully positive) review increases the visibility of the App in the Play Store.</string>
    <string name="odk_website">Visit the ODK website</string>
    <string name="odk_website_summary">ODK is used to collect data for social good in challenging environments.</string>
...

    <!--
     ##############################################
     # MISC
     ##############################################
     -->
    <string name="ok">OK</string>
    <!-- Used in many dialogs to dismiss the dialog without taking any action -->
    <string name="cancel">Cancel</string>

    <string name="cancel_loading_form">Cancel</string>
    <string name="cancel_location">Cancel</string>
    <string name="do_not_change">Cancel</string>
...
    <!--
     ##############################################
     # Projects
     ##############################################
     -->
    <string name="projects">Projects</string>
    <string name="settings">Settings</string>
    <string name="add_project">Add project</string>
    <string name="add">Add</string>
    <!-- Title of the dialog shown when attempting to create a project with connection settings that match an existing project -->
    <string name="duplicate_project">Duplicate project</string>
    <!-- Detail text of the dialog shown when attempting to create a project with connection settings that match an existing project -->
    <string name="duplicate_project_details">You already have a project with these connection settings. Do you want to switch to the existing project or add a new one?</string>
...
