<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/authLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#eee"
    android:gravity="center_horizontal"
    android:orientation="vertical">

...
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:focusable="true"
            android:focusableInTouchMode="true" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layoutUsername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:hintTextAppearance="@android:style/TextAppearance.Small">

            <EditText
                android:id="@+id/editUsername"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/username"
                android:inputType="text"
                android:maxLines="1" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/passwordLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:hintTextAppearance="@android:style/TextAppearance.Small">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/editPassword"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight=".9"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:maxLines="1" />
...

            </LinearLayout>

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/buttonSignIn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/sign_in" />
    </LinearLayout>

...
