<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include layout="@layout/app_bar_layout" />

    <LinearLayout
        android:id="@+id/llParent"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/appBarLayout"
        android:orientation="vertical">

        <ListView
            android:id="@android:id/list"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:clipToPadding="false"
            android:divider="@drawable/list_item_divider"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            android:scrollbarStyle="outsideOverlay" />

        <FrameLayout
            android:id="@android:id/empty"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/get_forms"
                style="@style/Widget.Collect.Button.Custom"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:onClick="onClickGetBlankForm"
                android:padding="20dp"
                android:paddingStart="50dp"
                android:paddingEnd="50dp"
                android:text="@string/get_forms"
                android:textSize="18sp" />
        </FrameLayout>
    </LinearLayout>
</RelativeLayout>