...
the License.
-->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include layout="@layout/toolbar" />

    <TextView
        android:id="@+id/pathtext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="15sp"
...
        android:paddingStart="8dp"
        android:paddingEnd="8dp"
        android:paddingTop="8dp"/>
    <!-- would prefer not to use an extra LinearLayout here, but weights don't
        seem to work properly in RelativeLayout -->
    <LinearLayout
        android:id="@+id/buttonholder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal">

        <Button
...
